# qt6-client-ssh

./: .gitignore  README.md
.github/: copilot-instructions.md
ssh_client_gui/: README.md  bridge.py  main.py  models.py  pyproject.toml  pysidedeploy.spec  ruff.toml  ssh_worker.py
ssh_client_gui/qml/: ConnectionForm.qml  Main.qml  OutputPanel.qml
