[project]
name = "ssh-client-gui"
version = "0.1.0"
description = "Client SSH graphique PySide6 / QML"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "paramiko>=3.4",
]

[project.scripts]
ssh-client-gui = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "main.py",
    "bridge.py",
    "ssh_worker.py",
    "models.py",
    "qml",
]
